--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>پروژه شخصی من </title>
   </head>
   <body>
